// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`addImportsToComponentDecorator should add imports property to Component decorator when it does not exist 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'app-root',
  templateUrl: './app.component.html',
  styleUrls: ['./app.component.scss'],
  imports: [StorefrontComponent]
})
export class AppComponent {
  title = 'app';
}
"
`;

exports[`addImportsToComponentDecorator should add property to existing Component decorator properties 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'app-root',
  standalone: true,
  imports: [StorefrontComponent]
})
export class AppComponent { }
"
`;

exports[`addImportsToComponentDecorator should handle Component decorator without existing object literal 1`] = `
"import { Component } from '@angular/core';

@Component({
  imports: [StorefrontComponent]
})
export class AppComponent { }
"
`;

exports[`addImportsToComponentDecorator should handle multiple classes and only modify decorated one 1`] = `
"import { Component } from '@angular/core';

export class OtherClass { }

@Component({
  selector: 'app-root',
  imports: [StorefrontComponent]
})
export class AppComponent { }
"
`;

exports[`addImportsToComponentDecorator should replace existing imports array with new value 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'app-root',
  standalone: true,
  imports: [StorefrontComponent],
  templateUrl: './app.component.html'
})
export class AppComponent { }
"
`;
